DRILL-4779: Kafka storage plugin (Kamesh Bhallamudi & Anil Kumar Batchu)