@@ -1,4 +1,4 @@
-/**
+/*
  * Licensed to the Apache Software Foundation (ASF) under one
  * or more contributor license agreements.  See the NOTICE file
  * distributed with this work for additional information
@@ -26,7 +26,6 @@ import java.util.concurrent.Future;
 
 import org.apache.drill.common.exceptions.ExecutionSetupException;
 import org.apache.drill.common.exceptions.UserException;
-import org.apache.drill.exec.ExecConstants;
 import org.apache.drill.exec.vector.BaseDataValueVector;
 import org.apache.drill.exec.vector.ValueVector;
 
@@ -82,6 +81,8 @@ public abstract class ColumnReader<V extends ValueVector> {
   long readStartInBytes = 0, readLength = 0, readLengthInBits = 0, recordsReadInThisIteration = 0;
   private ExecutorService threadPool;
 
+  volatile boolean isShuttingDown; //Indicate to not submit any new AsyncPageReader Tasks during clear()
+
   protected ColumnReader(ParquetRecordReader parentReader, int allocateSize, ColumnDescriptor descriptor,
       ColumnChunkMetaData columnChunkMetaData, boolean fixedLength, V v, SchemaElement schemaElement) throws ExecutionSetupException {
     this.parentReader = parentReader;
@@ -90,8 +91,7 @@ public abstract class ColumnReader<V extends ValueVector> {
     this.isFixedLength = fixedLength;
     this.schemaElement = schemaElement;
     this.valueVec =  v;
-    boolean useAsyncPageReader  = parentReader.getFragmentContext().getOptions()
-        .getOption(ExecConstants.PARQUET_PAGEREADER_ASYNC).bool_val;
+    boolean useAsyncPageReader = parentReader.useAsyncPageReader;
     if (useAsyncPageReader) {
       this.pageReader =
           new AsyncPageReader(this, parentReader.getFileSystem(), parentReader.getHadoopPath(),
@@ -101,17 +101,25 @@ public abstract class ColumnReader<V extends ValueVector> {
           new PageReader(this, parentReader.getFileSystem(), parentReader.getHadoopPath(),
               columnChunkMetaData);
     }
-
+    try {
+      pageReader.init();
+    } catch (IOException e) {
+      UserException ex = UserException.dataReadError(e)
+          .message("Error initializing page reader for Parquet file")
+          .pushContext("Row Group Start: ", this.columnChunkMetaData.getStartingPos())
+          .pushContext("Column: ", this.schemaElement.getName())
+          .pushContext("File: ", this.parentReader.getHadoopPath().toString() )
+          .build(logger);
+      throw ex;
+    }
     if (columnDescriptor.getType() != PrimitiveType.PrimitiveTypeName.BINARY) {
       if (columnDescriptor.getType() == PrimitiveTypeName.FIXED_LEN_BYTE_ARRAY) {
         dataTypeLengthInBits = columnDescriptor.getTypeLength() * 8;
       } else {
-        dataTypeLengthInBits = ParquetRecordReader.getTypeLengthInBits(columnDescriptor.getType());
+        dataTypeLengthInBits = ParquetColumnMetadata.getTypeLengthInBits(columnDescriptor.getType());
       }
     }
-    if(threadPool == null) {
-      threadPool = parentReader.getOperatorContext().getScanDecodeExecutor();
-    }
+    threadPool = parentReader.getOperatorContext().getScanDecodeExecutor();
   }
 
   public int getRecordsReadInCurrentPass() {
@@ -119,7 +127,7 @@ public abstract class ColumnReader<V extends ValueVector> {
   }
 
   public Future<Long> processPagesAsync(long recordsToReadInThisPass){
-    Future<Long> r = threadPool.submit(new ColumnReaderProcessPagesTask(recordsToReadInThisPass));
+    Future<Long> r = (isShuttingDown ? null : threadPool.submit(new ColumnReaderProcessPagesTask(recordsToReadInThisPass)));
     return r;
   }
 
@@ -127,7 +135,7 @@ public abstract class ColumnReader<V extends ValueVector> {
     reset();
     if(recordsToReadInThisPass>0) {
       do {
-        determineSize(recordsToReadInThisPass, 0);
+        determineSize(recordsToReadInThisPass);
 
       } while (valuesReadInCurrentPass < recordsToReadInThisPass && pageReader.hasPage());
     }
@@ -137,6 +145,9 @@ public abstract class ColumnReader<V extends ValueVector> {
   }
 
   public void clear() {
+    //State to indicate no more tasks to be scheduled
+    isShuttingDown = true;
+
     valueVec.clear();
     pageReader.clear();
   }
@@ -156,9 +167,7 @@ public abstract class ColumnReader<V extends ValueVector> {
           .pushContext("File: ", this.parentReader.getHadoopPath().toString() )
           .build(logger);
       throw ex;
-
     }
-
   }
 
   protected abstract void readField(long recordsToRead);
@@ -173,31 +182,21 @@ public abstract class ColumnReader<V extends ValueVector> {
    * @return - true if we should stop reading
    * @throws IOException
    */
-  public boolean determineSize(long recordsReadInCurrentPass, Integer lengthVarFieldsInCurrentRecord) throws IOException {
+  public boolean determineSize(long recordsReadInCurrentPass) throws IOException {
 
-    boolean doneReading = readPage();
-    if (doneReading) {
+    if (readPage()) {
       return true;
     }
 
-    doneReading = processPageData((int) recordsReadInCurrentPass);
-    if (doneReading) {
+    if (processPageData((int) recordsReadInCurrentPass)) {
       return true;
     }
 
-    // Never used in this code path. Hard to remove because the method is overidden by subclasses
-    lengthVarFieldsInCurrentRecord = -1;
-
-    doneReading = checkVectorCapacityReached();
-    if (doneReading) {
-      return true;
-    }
-
-    return false;
+    return checkVectorCapacityReached();
   }
 
-  protected Future<Integer> readRecordsAsync(int recordsToRead){
-    Future<Integer> r = threadPool.submit(new ColumnReaderReadRecordsTask(recordsToRead));
+  protected Future<Integer> readRecordsAsync(int recordsToRead) {
+    Future<Integer> r = (isShuttingDown ? null : threadPool.submit(new ColumnReaderReadRecordsTask(recordsToRead)));
     return r;
   }
 
@@ -233,7 +232,7 @@ public abstract class ColumnReader<V extends ValueVector> {
   public Future<Boolean> readPageAsync() {
     Future<Boolean> f = threadPool.submit(new Callable<Boolean>() {
       @Override public Boolean call() throws Exception {
-        return new Boolean(readPage());
+        return Boolean.valueOf(readPage());
       }
     });
     return f;
@@ -267,17 +266,20 @@ public abstract class ColumnReader<V extends ValueVector> {
   protected void hitRowGroupEnd() {}
 
   protected boolean checkVectorCapacityReached() {
+    // Here "bits" means "bytes"
+    // But, inside "capacity", "bits" sometimes means "bits".
+    // Note that bytesReadInCurrentPass is never updated, so this next
+    // line is a no-op.
     if (bytesReadInCurrentPass + dataTypeLengthInBits > capacity()) {
       logger.debug("Reached the capacity of the data vector in a variable length value vector.");
       return true;
     }
-    else if (valuesReadInCurrentPass > valueVec.getValueCapacity()) {
-      return true;
-    }
-    return false;
+    // No op: already checked this earlier and would not be here if this
+    // condition is true.
+    return valuesReadInCurrentPass > valueVec.getValueCapacity();
   }
 
-  // copied out of parquet library, didn't want to deal with the uneeded throws statement they had declared
+  // copied out of Parquet library, didn't want to deal with the uneeded throws statement they had declared
   public static int readIntLittleEndian(DrillBuf in, int offset) {
     int ch4 = in.getByte(offset) & 0xff;
     int ch3 = in.getByte(offset + 1) & 0xff;
@@ -288,7 +290,7 @@ public abstract class ColumnReader<V extends ValueVector> {
 
   private class ColumnReaderProcessPagesTask implements Callable<Long> {
 
-    private final ColumnReader parent = ColumnReader.this;
+    private final ColumnReader<V> parent = ColumnReader.this;
     private final long recordsToReadInThisPass;
 
     public ColumnReaderProcessPagesTask(long recordsToReadInThisPass){
@@ -308,12 +310,11 @@ public abstract class ColumnReader<V extends ValueVector> {
         Thread.currentThread().setName(oldname);
       }
     }
-
   }
 
   private class ColumnReaderReadRecordsTask implements Callable<Integer> {
 
-    private final ColumnReader parent = ColumnReader.this;
+    private final ColumnReader<V> parent = ColumnReader.this;
     private final int recordsToRead;
 
     public ColumnReaderReadRecordsTask(int recordsToRead){
